# RX-Framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  setup_git.bat  setup_git.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: GETTING_STARTED.md
examples/: basic_window.rs  button_demo.rs  test_window.rs
nb/: Gemma3_(4B)-Vision.ipynb
src/: application.rs  drawing.rs  error.rs  events.rs  layout.rs  lib.rs  window.rs
src/platform/: common.rs  macos.rs  mod.rs  unix.rs  windows.rs
src/widgets/: button.rs  container.rs  label.rs  mod.rs  text_input.rs
tests/: basic_test.rs
